sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:14: error: 'while' expected but '}' found.
  }
  ^