sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n = getNombreValeurs()
  var v = getValeur(0)
  for (i <- 1 to n-1) {
    v = getValeur (i)
    var j = 1
    do {
      if (plusPetit(v,getValeur(i-j))) {
        
      }
        
    }
  }
}